upgrade:: create api router get user in chat for mservice
